--- a/STS.Workbench.csproj
+++ b/STS.Workbench.csproj
@@ -52,9 +52,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="STS Data Adapter\STSDbCommand.cs">
+    <Compile Include="STS Data Adapter\STSCommand.cs" />
+    <Compile Include="STS Data Adapter\STSConnection.cs" />
+    <Compile Include="STS Data Adapter\STSDataAdapter.cs" />
+    <Compile Include="STS Data Adapter\STSDataReader.cs" />
+    <Compile Include="STS Data Adapter\STSdbCommand.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="STS Data Adapter\STSParameter.cs" />
     <Compile Include="STS Data Adapter\STSSchema.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
