--- a/STS.Workbench.csproj
+++ b/STS.Workbench.csproj
@@ -55,6 +55,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schema Table\Column.cs" />
     <Compile Include="Schema Table\SchemaTable.cs" />
     <Compile Include="STS Data Adapter\STSCommand.cs" />
     <Compile Include="STS Data Adapter\STSConnection.cs" />
