--- a/STS.Workbench.csproj
+++ b/STS.Workbench.csproj
@@ -57,7 +57,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="STS Data Adapter\STSCommand.cs" />
-    <Compile Include="STS Data Adapter\STSConnection.cs" />
+    <Compile Include="STS Data Adapter\STSConnection.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="STS Data Adapter\STSDataAdapter.cs" />
     <Compile Include="STS Data Adapter\STSDataReader.cs" />
     <Compile Include="STS Data Adapter\STSdbCommand.cs">
