--- a/STS.Workbench.csproj
+++ b/STS.Workbench.csproj
@@ -56,6 +56,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schema\Column.cs" />
+    <Compile Include="Schema\DataTable.cs" />
+    <Compile Include="Schema\SchemaTable.cs" />
     <Compile Include="STS Data Adapter\STSCommand.cs" />
     <Compile Include="STS Data Adapter\STSConnection.cs">
       <SubType>Component</SubType>
