--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@
 *.user
 *.sln.docstates
 
+
+# Build files and other unnecesary stuff
+*.exe
+*.dat
+*.sys
+*.config
+
 # Build results
 
 [Dd]ebug/
