--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -59,17 +59,17 @@
     <Compile Include="Schema\Column.cs" />
     <Compile Include="Schema\DataTable.cs" />
     <Compile Include="Schema\SchemaTable.cs" />
-    <Compile Include="STS Data Adapter\STSCommand.cs" />
-    <Compile Include="STS Data Adapter\STSConnection.cs">
+    <Compile Include="STSdbAdapter\STSCommand.cs" />
+    <Compile Include="STSdbAdapter\STSConnection.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="STS Data Adapter\STSDataAdapter.cs" />
-    <Compile Include="STS Data Adapter\STSDataReader.cs" />
-    <Compile Include="STS Data Adapter\STSdbCommand.cs">
+    <Compile Include="STSdbAdapter\STSDataAdapter.cs" />
+    <Compile Include="STSdbAdapter\STSDataReader.cs" />
+    <Compile Include="STSdbAdapter\STSdbCommand.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="STS Data Adapter\STSParameter.cs" />
-    <Compile Include="STS Data Adapter\STSSchema.cs" />
+    <Compile Include="STSdbAdapter\STSParameter.cs" />
+    <Compile Include="STSdbAdapter\STSSchema.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
