--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schema\Column.cs" />
     <Compile Include="Schema\DataTable.cs" />
+    <Compile Include="Schema\Row.cs" />
     <Compile Include="Schema\SchemaTable.cs" />
     <Compile Include="STSdbAdapter\STSCommand.cs" />
     <Compile Include="STSdbAdapter\STSConnection.cs" />
