--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="STSdb4">
-      <HintPath>..\..\STSdb4\STSdb4\bin\Release\STSdb4.dll</HintPath>
+      <HintPath>..\..\..\STSdb4\STSdb4\bin\Release\STSdb4.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
