--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -53,6 +53,9 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PreviewComponents\TableComponent.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schema\Column.cs" />
@@ -68,6 +71,12 @@
     </Compile>
     <Compile Include="STSdbAdapter\STSParameter.cs" />
     <Compile Include="STSdbAdapter\STSSchema.cs" />
+    <Compile Include="TablesPreview.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TablesPreview.Designer.cs">
+      <DependentUpon>TablesPreview.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -80,6 +89,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TablesPreview.resx">
+      <DependentUpon>TablesPreview.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
