table component updated

--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -107,8 +107,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\TABLE.ICO.ico" />
+    <Content Include="Resources\key.ico" />
+    <Content Include="Resources\record.ico" />
+    <Content Include="Resources\empty.ico" />
+    <Content Include="Resources\table.ico" />
+    <Content Include="Resources\userType.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
