--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -32,6 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="STSdb4, Version=4.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Users\plamen.dimitrov\Desktop\STSdb4.dll</HintPath>
@@ -60,6 +62,14 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServerControls\ServerStatus.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ServerControls\ServerStatus.Designer.cs">
+      <DependentUpon>ServerStatus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Servers\IServer.cs" />
+    <Compile Include="Servers\STSDbServer.cs" />
     <Compile Include="TablesDiagram\DiagramPreviewComponents\TableAddComponent.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -101,6 +111,9 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ServerControls\ServerStatus.resx">
+      <DependentUpon>ServerStatus.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TablesDiagram\DiagramPreviewComponents\TablesField.resx">
       <DependentUpon>TablesField.cs</DependentUpon>
     </EmbeddedResource>
@@ -141,9 +154,7 @@
     <Content Include="Resources\table.ico" />
     <Content Include="Resources\userType.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ServerControls\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
