--- a/STS.Workbench/STS.Workbench.csproj.LOCAL.8060.csproj
+++ b/STS.Workbench/STS.Workbench.csproj.LOCAL.8060.csproj
@@ -32,8 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="STSdb4, Version=4.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Users\plamen.dimitrov\Desktop\STSdb4.dll</HintPath>
@@ -51,26 +49,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FormExtensions.cs" />
-    <Compile Include="TablesDiagram\Helpers\FileExporter.cs" />
-    <Compile Include="TablesDiagram\Helpers\FileImporter.cs" />
-    <Compile Include="TablesDiagram\Helpers\IProgressable.cs" />
-    <Compile Include="TablesDiagram\Helpers\RowOperations.cs" />
-    <Compile Include="TablesDiagram\Helpers\StringObjectToIDataTransformer.cs" />
-    <Compile Include="TablesDiagram\Readers\IConnection.cs" />
+    <Compile Include="Helpers\FileExporter.cs" />
+    <Compile Include="Helpers\FileImporter.cs" />
+    <Compile Include="Helpers\IProgressable.cs" />
+    <Compile Include="Helpers\RowOperations.cs" />
+    <Compile Include="Helpers\StringObjectToIDataTransformer.cs" />
+    <Compile Include="Readers\IConnection.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ServerControls\ServerStatus.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ServerControls\ServerStatus.Designer.cs">
-      <DependentUpon>ServerStatus.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Servers\IServer.cs" />
-    <Compile Include="Servers\STSDbServer.cs" />
     <Compile Include="TablesDiagram\DiagramPreviewComponents\LoadingForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,7 +84,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TablesDiagram\Readers\STSDbConnection.cs" />
+    <Compile Include="Readers\STSDbConnection.cs" />
     <Compile Include="Schema\Column.cs" />
     <Compile Include="Schema\DataTable.cs" />
     <Compile Include="Schema\Row.cs" />
@@ -116,9 +106,6 @@
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ServerControls\ServerStatus.resx">
-      <DependentUpon>ServerStatus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TablesDiagram\DiagramPreviewComponents\LoadingForm.resx">
       <DependentUpon>LoadingForm.cs</DependentUpon>
@@ -157,13 +144,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\key.ico" />
+    <None Include="Resources\Wait.ico" />
     <None Include="Resources\Move.ico" />
     <Content Include="Resources\record.ico" />
     <Content Include="Resources\empty.ico" />
     <Content Include="Resources\table.ico" />
     <Content Include="Resources\userType.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ServerControls\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
