--- a/STS.Workbench/STS.Workbench.csproj.REMOTE.8060.csproj
+++ b/STS.Workbench/STS.Workbench.csproj.REMOTE.8060.csproj
@@ -51,12 +51,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FormExtensions.cs" />
-    <Compile Include="TablesDiagram\Helpers\FileExporter.cs" />
-    <Compile Include="TablesDiagram\Helpers\FileImporter.cs" />
-    <Compile Include="TablesDiagram\Helpers\IProgressable.cs" />
-    <Compile Include="TablesDiagram\Helpers\RowOperations.cs" />
-    <Compile Include="TablesDiagram\Helpers\StringObjectToIDataTransformer.cs" />
-    <Compile Include="TablesDiagram\Readers\IConnection.cs" />
+    <Compile Include="Helpers\FileExporter.cs" />
+    <Compile Include="Helpers\FileImporter.cs" />
+    <Compile Include="Helpers\RowOperations.cs" />
+    <Compile Include="Helpers\StringObjectToIDataTransformer.cs" />
+    <Compile Include="Readers\IConnection.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,12 +70,6 @@
     </Compile>
     <Compile Include="Servers\IServer.cs" />
     <Compile Include="Servers\STSDbServer.cs" />
-    <Compile Include="TablesDiagram\DiagramPreviewComponents\LoadingForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TablesDiagram\DiagramPreviewComponents\LoadingForm.Designer.cs">
-      <DependentUpon>LoadingForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="TablesDiagram\DiagramPreviewComponents\TableAddComponent.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -94,7 +87,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TablesDiagram\Readers\STSDbConnection.cs" />
+    <Compile Include="Readers\STSDbConnection.cs" />
     <Compile Include="Schema\Column.cs" />
     <Compile Include="Schema\DataTable.cs" />
     <Compile Include="Schema\Row.cs" />
@@ -114,14 +107,12 @@
     <Compile Include="TablesDiagram\DiagramPreview.Designer.cs">
       <DependentUpon>DiagramPreview.cs</DependentUpon>
     </Compile>
+    <Compile Include="TablesDiagram\table.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ServerControls\ServerStatus.resx">
       <DependentUpon>ServerStatus.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="TablesDiagram\DiagramPreviewComponents\LoadingForm.resx">
-      <DependentUpon>LoadingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TablesDiagram\DiagramPreviewComponents\TablesField.resx">
       <DependentUpon>TablesField.cs</DependentUpon>
