db wizard added

--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -69,6 +69,12 @@
     <Compile Include="DbManager\ManagerPreview.Designer.cs">
       <DependentUpon>ManagerPreview.cs</DependentUpon>
     </Compile>
+    <Compile Include="DbManager\Wizards\STSdb4Wizard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DbManager\Wizards\STSdb4Wizard.Designer.cs">
+      <DependentUpon>STSdb4Wizard.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormExtensions.cs" />
     <Compile Include="TablesDiagram\Helpers\FileUtils.cs" />
     <Compile Include="TablesDiagram\Helpers\IProgressable.cs" />
@@ -140,6 +146,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DbManager\ManagerPreview.resx">
       <DependentUpon>ManagerPreview.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DbManager\Wizards\STSdb4Wizard.resx">
+      <DependentUpon>STSdb4Wizard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
